tests/rosetta/out/Java/cartesian-product-of-two-or-more-lists-4.error
parse: error[P001]: /workspace/mochi/tests/rosetta/x/Mochi/cartesian-product-of-two-or-more-lists-4.mochi:9:19: unexpected token "-1" (expected "{" Statement* "}" (("else" IfStmt) | ("else" "{" Statement* "}"))?)
  --> /workspace/mochi/tests/rosetta/x/Mochi/cartesian-product-of-two-or-more-lists-4.mochi:9:19

  9 |     if i < len(xs)-1 { s = s + " " }
    |                   ^

help:
  Check for a missing `{` or `}` to close the block.